--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-
+   
 }
 
 @keyframes fadeIn{
@@ -35,29 +35,31 @@
 
 .heading{
     position: relative;
-    width: 100%;
-    height: 100vh;
+    max-width: 100%;
+    height: 100%;
     background: rgb(16, 16, 16);
 }
 
 nav{
     display: flex;
-    width: 84%;
+    max-width: 100%;
+    /* width: 84%; */
     height: 27%;
     margin: auto;
     padding: 10px 0;
     align-items: center;
     justify-content: space-between;
-    background: orange;
+    background: linear-gradient(#ffcd4f,rgb(255, 60, 0));
 }
 
+nav ul{
+    max-width: 100%;
+}
 
 nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
-    background: orange;
-
 }
 
 nav ul li a{
@@ -77,6 +79,9 @@ nav ul li a:hover{
     
 }
 
+nav .logo img{
+    max-width: 100%;
+}
 
 nav .logo:hover{
     animation: slideDown 2.5s; 
@@ -84,21 +89,23 @@ nav .logo:hover{
 }
 
 .detail{
-    margin-left: 8%;
+    margin-left: 6%;
+    margin-right: 8%;
     margin-top: 5%;
-    
+    max-width: 100%;
 }
 
 .detail h1{
     font-size: 50px;
     color: #ffffff;
-
+    max-width: 100%;
 
 }
 
 span{
     color: rgb(255, 179, 37);
     font-family: 'Shadows Into Light', cursive;
+    max-width: 100%;
 }
 
 .detail p{
@@ -110,7 +117,7 @@ span{
 }
 
 .detail a{
-    background: orange;
+    background: linear-gradient(#ffcd4f,rgb(255, 60, 0));
     padding: 10px 18px;
     text-decoration: none;
     color: rgb(0, 0, 0);
@@ -126,6 +133,10 @@ span{
     box-shadow: 0 0 20px rgb(255, 255, 255);
 }
 
+.nameheading{
+    max-width: 100%;
+}
+
 .images{
     width: 40%;
     height: 80%;
@@ -136,18 +147,32 @@ span{
 }
 
 .images img{
+    /* max-width: 100%; */
     height: 90%;
     position: absolute;
-    left: 50%;
+    left: 60%;
     bottom: 0;
     transform: translateX(-50%);
     transition: bottom 1s, left 1s;
     
 }
 
+.images .photo img{
+    max-width: 100%;
+}
+
+.images .shape img{
+    max-width: 100%;
+}
+
+.images .photo{
+    text-align: center;
+}
+
 .images .shape{
     animation: fadeIn 3s;
     opacity: 0.75;
+    text-align: center;
 }
 
 .images:hover .photo{
@@ -155,8 +180,13 @@ span{
     cursor: pointer;
 }
 
+.resume{
+    text-align: center;
+    padding: 7px;
+}
+
 .resume img{
-    margin-left: 25%;
+    /* margin-left: 25%; */
     bottom: 0;
     max-width: 100%;
 }
@@ -164,10 +194,11 @@ span{
 .tables{
     color: orange;
     background: rgb(255, 255, 255);
-    padding: 1px;
+    padding: 3px;
     text-align: center;
     box-shadow: 0 0 20px rgb(255, 171, 53);
     width: 80%;
+    /* max-width: 100%; */
 }
 
 .tr1{
@@ -204,6 +235,10 @@ span{
 
 .education{
     color: #ffffff;
+}
+
+.detail ul li{
+    list-style: none;
 }
 
 .fa-phone{
@@ -258,6 +293,10 @@ span{
     border-radius: 10px;
 }
 
+.icons ul li{
+    list-style: none;
+}
+
 .icons ul:hover{
     box-shadow: 0 0 20px orange;
     
@@ -273,5 +312,92 @@ span{
 .detail ul:hover{
     cursor: pointer;
     box-shadow: 0 0 20px orange;
+}
+
+@media only screen and (max-width:820px){
+    @keyframes fadeIn{
+        from{
+            opacity: 0;
+        }
+        to{
+            opacity: 1;
+        }
+    }
+    
+    @keyframes slideDown{
+        from{
+            transform: rotate(0deg);
+        }
+        to{
+            transform: rotate(360deg);
+        }
+    }
+    
+    .heading{
+        /* position: relative; */
+        max-width: 100%;
+
+        background-color: rgb(0, 0, 0);
+    }
+
+    nav ul{
+        width: 100%;
+        height: 27%;
+        /* background: linear-gradient(#ffcd4f,rgb(255, 60, 0)); */
+        position: absolute;
+        top: center;
+        /* left: 10; */
+        text-align: right;
+        align-items: center;
+        z-index: 2;
+    }
+    nav ul li{
+        display: block;
+        margin-top: 15px;
+        margin-bottom: 10px;
+        font-size: medium;
+    }
+    nav ul li a{
+        /* text-decoration: none; */
+        color: rgb(255, 255, 255);
+        font-weight: bold;
+        background: rgb(0, 0, 0);   
+        padding: 5px 7px;
+        border-radius: 5px;
+
+    }
+    nav .logo{
+        width: 65%;
+        height: 7%;
+    }
+    nav .logo:hover{
+        animation: slideDown 2.5s; 
+        cursor: pointer;
+    }
+    .tables{
+        text-align: center;
+    }
+    .images img{
+        max-width: 100%;
+        /* height: 80%; */
+        /* text-align: center; */
+        position: absolute;
+        left: 50%;
+        top: 100%;
+        bottom: 0;
+        transform: translateX(-50%);
+        /* transform: translateZ(100%); */
+        transition: bottom 1s, left 1s;
+        
+    }
+    .images .photo{
+        max-width: 100%;
+        /* background-color: black; */
+    }
+    .images .shape{
+        max-width: 100%;
+        /* background-color: black; */
+    }
+
 }
 
