--- a/style.css
+++ b/style.css
@@ -350,8 +350,11 @@ span{
         top: center;
         /* left: 10; */
         text-align: right;
-        align-items: center;
-        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        align-items: right;
+        justify-content: center;
+        /* z-index: 2; */
     }
     nav ul li{
         display: block;
